<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button android:text="@string/Create" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:onClick="OnCreateClick"></Button>

    <Button android:text="@string/Start" android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Button>

    <Button android:text="@string/Cancel" android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Button>

</LinearLayout>

    <TextView
        android:id="@+id/counter_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text=""
        android:textColor="@color/black"></TextView>


    </androidx.constraintlayout.widget.ConstraintLayout>