<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:orientation="vertical"
    android:layout_marginTop="0dp">

    <ImageView
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:contentDescription="@string/avengers_background_image_description"
        tools:src="@drawable/avengers_infinity_war_background"
        android:scaleType="fitXY"
        />



    <RelativeLayout
        style="@style/movieLayout"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/details_fragment_poster"
            android:layout_marginLeft="0px"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:contentDescription="@string/avengers_background_image_description"
            tools:src="@drawable/avengers_infinity_war"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            />

        <TextView
            tools:text="@string/avengers_infinity_war_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:id="@+id/details_fragment_title"
            android:layout_toRightOf="@+id/details_fragment_poster"
            style="@style/marginLeftFromPreviewImage"
            android:layout_centerHorizontal="true"
            />


        <TextView
            android:text="@string/released"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:id="@+id/released"
            android:layout_toRightOf="@+id/details_fragment_poster"
            android:layout_below="@+id/details_fragment_title"
            style="@style/marginLeftFromPreviewImage"
            />

        <TextView
            tools:text="@string/avengers_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/released"
            tools:layout_below="@+id/avengers_title"
            android:id="@+id/details_fragment_release_date"
            style="@style/marginLeftFromPreviewImage"
            />

        <Button
            android:id="@+id/details_fragment_trailer_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/movie_trailer"
            android:layout_below="@+id/released"
            android:layout_toRightOf="@+id/details_fragment_poster"
            style="@style/marginLeftFromPreviewImage"
            android:onClick="linkToYoutube"
            />

    </RelativeLayout>

    <ScrollView

        style="@style/movieLayout"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:text="@string/overview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                tools:text="@string/avengers_infinity_war_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/details_fragment_overview_text"
                android:textSize="15sp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>